Major production update (v2)

--- a/website/todo
+++ b/website/todo
@@ -1,6 +1,9 @@
 - Logo
-- Fix about, experience
-- Write about, experience
-- Experiment with colors
-- Experiment with fonts
-- Arrow down
+- Add images to projects
+- Revamp about me (plus image border)
+- Blog?
+- Updated Resume
+- Add better details to experiences, pictures?
+- Bullet point implementation
+- Lunero github
+- Color scheme update
